deploy/k8s-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-demo1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitops-demo1
  template:
    metadata:
      labels:
        app: gitops-demo1
    spec:
      containers:
        - name: gitops-demo1
          image: acr4b3feac65db9343e.azurecr.io/gitops-demo1:01b30093483de64c44eaff7388955f02f5a0566c
          ports:
            - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-demo2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitops-demo2
  template:
    metadata:
      labels:
        app: gitops-demo2
    spec:
      containers:
        - name: gitops-demo2
          image: acr4b3feac65db9343e.azurecr.io/gitops-demo2:01b30093483de64c44eaff7388955f02f5a0566c
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: gitops-demo1
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: gitops-demo1
---
apiVersion: v1
kind: Service
metadata:
  name: gitops-demo2
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: gitops-demo2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-ingress
spec:
  ingressClassName: external-nginx
  rules:
  - http:
      paths:
      - path: /demo1
        pathType: Prefix
        backend:
          service:
            name: gitops-demo1
            port:
              number: 5000
      - path: /demo2
        pathType: Prefix
        backend:
          service:
            name: gitops-demo2
            port:
              number: 5000
